[tool.poetry]
name = "api-tests"
version = "0.1.0"
description = ""
authors = ["Khnyrev <56911903+Khnyrev@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "api_tests"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
